# python-project-template

./: Makefile  cookiecutter.json  pyproject.toml
{{cookiecutter.project}}/: README.md  pyproject.toml
{{cookiecutter.project}}/docs/: index.md
